<resources>
    <string name="app_name">AndroidStudy</string>
    <string name="low_memory_text">Device is low on memory</string>
    <string name="application_created_text">Application has been created</string>
    <string name="activity_demo_custom_view">Custom view demo activity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="hello_world">Hello World!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_list_view">This activity displays a list, using a ListView component. We will place here a names of space stars.</string>
    <string name="fragment1_text">Fragment 1</string>
    <string name="fragment2_text">Fragment 2</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="stack">add to Back Stack</string>
    <string name="hello_blank_fragment1">Fragment1</string>
    <string name="hello_blank_fragment2">Fragment2</string>
    <string name="hello_blank_support_fragment">Hello blank support fragment</string>
    <string name="play_audio_service_description">This is a service to demonstrate an audio playing.</string>
    <string name="service_description">This is a demo service.</string>
    <string name="intent_service_description">This is a demo intent service.</string>
    <string name="mAddress">Вавилова, 23</string>
    <string name="extra_office">Доп.офис №9380/0138</string>
    <string name="mDistance">12 км.</string>
    <string name="phone_number">+7 (800) 555-55-00</string>
    <string name="information_text">Telephone for queries</string>
    <string name="quality_estimation">Feedback</string>
    <string name="progress_bar_inscription">Please wait, list of banks is downloading now ...</string>
    <string name="detailed_info_empty">Click on a needed bank to see its details.</string>
    <string name="service_demo2_description">This service runs by default (on a UI thread). You may see that UI jams when this service performs.</string>
    <string name="service_demo3_description">This service runs on separate thread.</string>
    <string name="service_demo4_description">This service is bound.</string>
    <string name="service_demo5_description">This service uses a Messenger. This mechanism renders a
        sending of data(message), not the activity requests it on demand. One needs to implement a
        way to receive the data on demand.</string>
    <string name="service_demo5_title">Value received from service:</string>
    <string name="rotation_activity_message">Since activities do get recreated after screen is rotated, the data of a view located on this activity should get lost. But android doesn\'t allow this to happen. You may rotate the screen to see that its true. Even that TextView and EditText present lower are set to text \'Vlad\' programmatically. Since they have an id set to them, android is able to recover them, using specific mechanism. But it doesn\'t work for primitives or objects. In this case developer has to use onCreate(Bundle savedInstanceState) and onSaveInstanceState(Bundle savedInstanceState) methods.</string>
    <string name="title_activity_add_buttons">AddButtonsActivity</string>
    <string name="title_activity_one_fragment">OneFragmentActivity</string>
    <string name="title_activity_fragments">FragmentsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="background_task">"Some background task is underway ..."</string>
    <string name="handler_tasks_click_to_run_text">"Run background task"</string>
    <string name="handler_tasks_run_on_UI_text">"Computing on a UI thread"</string>
    <string name="handler_tasks_run_on_separate_thread_and_update_UI_text">
        "Computing on a UI thread and updating it"</string>
    <string name="same_intents_button_text">"Run intent"</string>
    <string name="same_intents_button_text_2">"Run intent with chooser"</string>
    <string name="same_intents_text_view_text">"Click button that runs an intent matching an intent-filters in 2 activities"</string>
    <string name="web_browser_run_request_button">"Go"</string>
    <string name="canvasContentDescription">Mini Paint is a simple line drawing app.
   Drag your fingers to draw. Rotate the phone to clear.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_simple_fragment">SimpleFragmentActivity</string>
    <string name="currencies_absent_message">No currencies downloaded. Did you switch Wi-Fi on ?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="simple_intent_text">
        "This activity has been invoked using a simple intent:\n
        Intent intent = new Intent (this, SimpleIntentActivity.class);\n
        startActivity(intent);"
    </string>
    <string name="degrees_values">Value of degrees for an air in Celsius of Fahrenheit</string>
    <string name="default_degrees_values">25</string>
    <string name="default_degrees_type">C</string>
    <string name="task2_description">DownloadManager Demo.\nCheck notification bar for downloaded files.</string>
    <string name="run_files_downloading">Run files downloading</string>
    <string name="open_downloads_screen">Open downloads screen</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="first_text">First text</string>
    <string name="second_text">Second text</string>
    <string name="third_text">Third text</string>
    <string name="fourth_text">Fourth text</string>
</resources>