<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vladislav.androidstudy.javarx2.example3.RxJava2Example3Activity">

    <TextView
        android:layout_marginStart="@dimen/downloadmanager_demo_description_margin"
        android:layout_marginEnd="@dimen/downloadmanager_demo_description_margin"
        android:id="@+id/description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:breakStrategy="simple"
        android:gravity="center"
        android:textSize="@dimen/text_size_big"
        android:text="@string/task2_description"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/run_downloading_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/run_downloading_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_files_downloading"
        app:layout_constraintTop_toBottomOf="@id/description_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/open_downloads_button" />

    <Button
        android:id="@+id/open_downloads_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_downloads_screen"
        app:layout_constraintTop_toBottomOf="@id/run_downloading_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

