<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_all_borders_padding"
    android:background="@drawable/background"
    tools:context=".separatestudypackage.weatherforecast.WeatherForecastActivity">

    <ImageView
        android:id="@+id/weather_type_image_view"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name_text_view"
        tools:srcCompat="@drawable/icon_clearsky"
        android:contentDescription="Left blank in purpose"/>

    <TextView
        android:textColor="@color/common_border_color"
        android:id="@+id/city_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="City name" />

    <TextView
        android:textColor="@color/common_border_color"
        android:id="@+id/degrees_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_views_margin"
        android:contentDescription="@string/degrees_values"
        android:textSize="@dimen/degrees_value_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_text_view"
        tools:text="@string/default_degrees_values" />

    <TextView
        android:textColor="@color/common_border_color"
        android:id="@+id/degrees_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/degrees_type_text_size"
        app:layout_constraintLeft_toRightOf="@id/degrees_value_text_view"
        app:layout_constraintTop_toTopOf="@id/degrees_value_text_view"
        tools:text="@string/default_degrees_type" />

    <TextView
        android:textColor="@color/common_border_color"
        android:id="@+id/weather_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_views_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/degrees_value_text_view"
        tools:text="weather type" />

    <TextView
        android:textColor="@color/common_border_color"
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Some date" />

</androidx.constraintlayout.widget.ConstraintLayout>